# ppgso2

./: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PUZZLE_IMPLEMENTATION.md
_build/: CMakeCache.txt
cmake/: FindASSIMP.cmake  FindGLEW.cmake
data/Collection/: Baseboard__0.mtl  BathroomFurnitures_Black_001_0_001.mtl  BathroomFurnitures_M_10_Leaf_1_001_0.mtl  BathroomFurnitures_M_1_Mat3d66_1341339_11_7439_001_0.mtl  BathroomFurnitures_M_1_Mat3d66_1341339_12_2128_001_0.mtl  BathroomFurnitures_M_1_Mat3d66_1341339_17_7081_001_0.mtl  BathroomFurnitures_M_1_Mat3d66_1341339_18_8295_001_0.mtl  BathroomFurnitures_Material_10_001_0.mtl  BathroomWashing_Lavadora_0.mtl  BathroomWashing_Secadora_0.mtl  BedDecors_Glass_0.mtl  BedDecors_Splitleaf3small_001_0.mtl  BedDecors_TravelersStem_001_0.mtl  BedDecors__4_001_0.mtl  Bed_BlackMetal_0.mtl  Bed_Cream_0.mtl  Bed_DarkGray_0.mtl  Bed_Plain_Grey_Texture_2669056_20cm_001_0.mtl  Bed_Plain_Natural_Sheer_2771559_20cm_001_0.mtl  BookCase_Book_Spine_1_0.mtl  BookCase_Color_5_0.mtl  BookCase_Color_6_0.mtl  BookCase_Wood049_0.mtl  BookCase__45_0.mtl  Box001__0_003.mtl  Box002_Candy_Corn_Nose_0.mtl  Christmas_Red_0.mtl  Circle_002_Circle_001_Dupli_42_decorations_0.mtl  Circle_002__0.mtl  Coffee_Maker_Coffee_Maker_Material5_0.mtl  Cookie_1_Cookie3_0.mtl  Cookie_2_Cookie2_0.mtl  Cookie_3_Cookie1_0.mtl  Cookie_Crumbs_Cookie_Crumbs_0.mtl  CouchSet_Black_0.mtl  CouchSet_GlassGreen_0.mtl  CouchSet_Material_10_002_0.mtl  CouchSet_Material_1_0.mtl  CouchSet_Material_2_0.mtl  CouchSet_Material_5_0.mtl  (+90 more)
ppgso/: Mesh_Assimp.cpp  Mesh_Assimp.h  Mesh_Tiny.cpp  Mesh_Tiny.h  shader.cpp  shader.h
shader/: phong_frag.glsl  phong_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  skybox_vert.glsl  texture_vert.glsl
src/playground/: GenericModel.cpp  GenericModel.hpp  SceneWindow.hpp  camera.cpp  camera.h  keyframe.cpp  keyframe.h  light.cpp  light.h  mainlight.cpp  mainlight.h  object.cpp  object.h  playground.cpp  scene.cpp  scene.h
src/playground/objects/: plane.cpp  plane.h  puzzle.cpp  puzzle.h  skybox.cpp  skybox.h
src/playground/objects/building/: balcony.cpp  balcony.h  building.cpp  building.h
